<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue"
    tools:context=".Profile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:layout_height="wrap_content"
        android:background="@color/LightBlue"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/mstBlack"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbarDTitle"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentTop="true"
                    android:background="@color/mstBlack"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageSelect"
                    android:layout_width="170dp"
                    android:layout_height="0dp"
                    android:layout_below="@+id/toolbarDTitle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="85dp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbarDTitle">

                    <ImageView
                        android:id="@+id/profilePic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/blue"
                        android:indeterminateTintMode="src_atop" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/nameSection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbarDTitle"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageSelect">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Name"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/profileEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/profileIdentity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Identity"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameSection">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="7dp"
                        android:layout_weight="1"
                        android:backgroundTint="#9FA3B8"
                        app:cardCornerRadius="13dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="7dp"
                            android:background="@null"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/contributions"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contributions"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="#9FA3B8"
                        app:cardCornerRadius="13dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="7dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/likes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/likes"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/profileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/whiteToolBarMenu"
                android:popupTheme="@color/gray" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="70dp"
        android:clipToPadding="false"
        android:id="@+id/profileRecycler"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>